switch to native tls do to ARM compatability issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ rust-version = "1.70"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono"] }
+sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "mysql", "chrono"] }
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -22,7 +22,7 @@ arrow = { version = "50.0", features = ["csv", "json"] }
 parquet = { version = "50.0", features = ["arrow", "async"] }
 mlua = { version = "0.8", features = ["lua54", "vendored"] }
 url = "2.4"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "native-tls"] }
 tempfile = "3.8"
 apache-avro = "0.16"
 
