--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ url = "2.4"
 reqwest = { version = "0.11", features = ["json", "native-tls"] }
 tempfile = "3.8"
 apache-avro = "0.16"
+rust_decimal = { version = "1.35", features = ["serde", "db-postgres", "db-tokio-postgres"] }
 
 [dev-dependencies]
 tempfile = "3.8"
