--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "pos
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
+regex = "1.10"
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
