--- a/examples/13_yaml_config/basic_config.yaml
+++ b/examples/13_yaml_config/basic_config.yaml
@@ -7,7 +7,7 @@ source:
   uri: "employees.csv"
 
 target:
-  uri: "employees_output.csv"
+  uri: "employees_output.json"
 
 options:
   batch_size: 1000
