Update YamlConfig to serialize the newly serializable TransformConfig
- moved YamlConfig out of config.rs into its own file
- added/updated tests for YamlConfig serialization and deserialization
- updated YAML examples in README and in examples folder to conform with the new YAML format of transform
- bumped version image in README.md to match current release

--- a/examples/my_job.yaml
+++ b/examples/my_job.yaml
@@ -10,7 +10,9 @@ target:
 options:
   batch_size: 50000
   infer_schema: true
-  transform: |
-    profit = row.revenue - row.cost
-    margin = profit / row.revenue
+  transform:
+    type: script
+    value: |
+      profit = row.revenue - row.cost
+      margin = profit / row.revenue
   preview: 10
