fix example config log_level value in PR19

--- a/examples/13_yaml_config/basic_config.yaml
+++ b/examples/13_yaml_config/basic_config.yaml
@@ -12,7 +12,7 @@ target:
 options:
   batch_size: 1000
   infer_schema: true
-  log_level: "Info"
+  log_level: "info"
   transform:
     type: script
     value: |
