add excel connector

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,8 @@ base64 = "0.21"
 duckdb = { version = "1.4.1", features = ["bundled"] }
 odbc-api = { version = "8.0", features = ["narrow"] }
 hex = "0.4"
+calamine = "0.26"
+xlsxwriter = "0.6"
 
 [dev-dependencies]
 tempfile = "3.8"
